--- a/MILP Vary RHS Series2.ipynb
+++ b/MILP Vary RHS Series2.ipynb
@@ -495,7 +495,9 @@
     "    model.reset() \n",
     "    # update the RHS values\n",
     "    for constr, new_rhs in zip(model.getConstrs(), b):\n",
-    "        constr.RHS = new_rhs"
+    "        constr.RHS = new_rhs\n",
+    "    # model update\n",
+    "    model.update()"
    ]
   },
   {
@@ -516,7 +518,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:31<00:00,  3.19s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:35<00:00,  3.57s/it]\n"
      ]
     },
     {
@@ -525,14 +527,14 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count     10.000000              10.0     10.000000\n",
-      "mean  -17169.485687               0.0      3.181638\n",
-      "std        1.269903               0.0      0.315245\n",
-      "min   -17171.525260               0.0      2.742929\n",
-      "25%   -17170.355450               0.0      2.971063\n",
-      "50%   -17169.264223               0.0      3.155949\n",
-      "75%   -17168.411405               0.0      3.392761\n",
-      "max   -17167.980247               0.0      3.682380\n",
-      "Total elapsed time for optimization: 31.82 seconds\n"
+      "mean  -17169.485687               0.0      3.564966\n",
+      "std        1.269903               0.0      0.368112\n",
+      "min   -17171.525260               0.0      3.090026\n",
+      "25%   -17170.355450               0.0      3.229829\n",
+      "50%   -17169.264223               0.0      3.569724\n",
+      "75%   -17168.411405               0.0      3.808666\n",
+      "max   -17167.980247               0.0      4.216027\n",
+      "Total elapsed time for optimization: 35.65 seconds\n"
      ]
     }
    ],
@@ -583,7 +585,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:01<00:00,  5.30it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:01<00:00,  5.22it/s]\n"
      ]
     },
     {
@@ -592,14 +594,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count    10.000000              10.0     10.000000\n",
-      "mean  -7409.652066               0.0      0.182991\n",
-      "std       0.084518               0.0      0.031638\n",
-      "min   -7409.778049               0.0      0.155712\n",
-      "25%   -7409.713027               0.0      0.162808\n",
-      "50%   -7409.647334               0.0      0.169128\n",
-      "75%   -7409.586088               0.0      0.185587\n",
-      "max   -7409.530987               0.0      0.246666\n",
-      "Total elapsed time for optimization: 1.83 seconds\n"
+      "mean  -7409.652066               0.0      0.184922\n",
+      "std       0.084518               0.0      0.012300\n",
+      "min   -7409.778049               0.0      0.172575\n",
+      "25%   -7409.713027               0.0      0.176240\n",
+      "50%   -7409.647334               0.0      0.183073\n",
+      "75%   -7409.586088               0.0      0.189195\n",
+      "max   -7409.530987               0.0      0.213186\n",
+      "Total elapsed time for optimization: 1.85 seconds\n"
      ]
     }
    ],
@@ -757,11 +759,11 @@
     "        b = torch.cat([b, torch.zeros(b.shape[0], self.A.shape[0] - b.shape[1], device=b.device)], dim=1)\n",
     "        # calculate constraint violations (Ax <= b)\n",
     "        lhs = torch.einsum(\"mn,bn->bm\", self.A, x)  # Ax\n",
-    "        constr_violation = torch.relu(lhs - b - 1e-5).sum(dim=1)  # Max(0, Ax - b)\n",
+    "        constr_violation = torch.relu(lhs - b - 1e-5).max(dim=1)[0]  # Max(0, Ax - b)\n",
     "        # calculate bounds violations\n",
-    "        lower_violation = torch.relu(self.lb - x - 1e-5).sum(dim=1)  # x >= lb\n",
-    "        upper_violation = torch.relu(x - self.ub - 1e-5).sum(dim=1)  # x <= ub\n",
-    "        return constr_violation + lower_violation + upper_violation"
+    "        lower_violation = torch.relu(self.lb - x - 1e-5).max(dim=1)[0]  # x >= lb\n",
+    "        upper_violation = torch.relu(x - self.ub - 1e-5).max(dim=1)[0]  # x <= ub\n",
+    "        return torch.stack([constr_violation, lower_violation, upper_violation], dim=1).max(dim=1)[0]"
    ]
   },
   {
@@ -977,7 +979,7 @@
       "Early stopping at iters 18875\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 204.86 sec.\n"
+      "The training time is 275.18 sec.\n"
      ]
     }
    ],
@@ -1004,7 +1006,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 211.80it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 137.94it/s]\n"
      ]
     },
     {
@@ -1013,14 +1015,14 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count     10.000000         10.000000     10.000000\n",
-      "mean  -11066.258111          0.645953      0.003175\n",
-      "std       13.911703          0.001209      0.001086\n",
-      "min   -11084.522877          0.644632      0.001505\n",
-      "25%   -11079.017925          0.644883      0.002569\n",
-      "50%   -11066.197553          0.645920      0.003116\n",
-      "75%   -11054.404312          0.646534      0.003296\n",
-      "max   -11047.428326          0.648378      0.005513\n",
-      "Total elapsed time for optimization: 0.03 seconds\n",
+      "mean  -11066.258111          0.028231      0.004423\n",
+      "std       13.911703          0.000319      0.001369\n",
+      "min   -11084.522877          0.027955      0.002287\n",
+      "25%   -11079.017925          0.027964      0.003349\n",
+      "50%   -11066.197553          0.028085      0.004328\n",
+      "75%   -11054.404312          0.028568      0.005415\n",
+      "max   -11047.428326          0.028669      0.006658\n",
+      "Total elapsed time for optimization: 0.04 seconds\n",
       "Number of infeasible solution: 10\n"
      ]
     }
@@ -1206,7 +1208,7 @@
       "Early stopping at iters 10750\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 128.45 sec.\n"
+      "The training time is 161.72 sec.\n"
      ]
     }
    ],
@@ -1233,7 +1235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 178.14it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 176.96it/s]\n"
      ]
     },
     {
@@ -1242,13 +1244,13 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count   10.000000         10.000000     10.000000\n",
-      "mean   204.792418         87.063377      0.004229\n",
-      "std      3.592079          0.793169      0.000917\n",
-      "min    198.478640         86.474243      0.002996\n",
-      "25%    203.294348         86.500748      0.003804\n",
-      "50%    205.025764         86.646095      0.004140\n",
-      "75%    207.813631         87.643599      0.004545\n",
-      "max    208.928738         88.397385      0.005759\n",
+      "mean   204.792418          5.452121      0.003583\n",
+      "std      3.592079          0.010115      0.001064\n",
+      "min    198.478640          5.434756      0.002144\n",
+      "25%    203.294348          5.448238      0.003000\n",
+      "50%    205.025764          5.452510      0.003556\n",
+      "75%    207.813631          5.461223      0.003917\n",
+      "max    208.928738          5.463412      0.006109\n",
       "Total elapsed time for optimization: 0.04 seconds\n",
       "Number of infeasible solution: 10\n"
      ]
