Bug fixed: load A

--- a/MILP Vary Obj Series1.ipynb
+++ b/MILP Vary Obj Series1.ipynb
@@ -92,7 +92,7 @@
     "    A_matrix = np.zeros((num_constraints, num_variables))\n",
     "    # cnt\n",
     "    i = 0\n",
-    "    for constraint in model.getConstrs():\n",
+    "    for i, constraint in enumerate(model.getConstrs()):\n",
     "        # check the sense and adjust if necessary\n",
     "        if constraint.Sense == GRB.GREATER_EQUAL:\n",
     "            # multiply the constraint row and RHS by -1 to convert >= to <=\n",
@@ -553,7 +553,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [04:36<00:00, 27.60s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [04:59<00:00, 29.92s/it]\n"
      ]
     },
     {
@@ -562,14 +562,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count    10.000000              10.0     10.000000\n",
-      "mean   8756.800000               0.0     27.591036\n",
-      "std     162.387602               0.0      9.937268\n",
-      "min    8518.000000               0.0     13.570077\n",
-      "25%    8677.750000               0.0     19.508514\n",
-      "50%    8747.000000               0.0     24.854770\n",
-      "75%    8856.250000               0.0     37.964378\n",
-      "max    9073.000000               0.0     39.975217\n",
-      "Total elapsed time for optimization: 275.91 seconds\n"
+      "mean   8756.800000               0.0     29.903488\n",
+      "std     162.387602               0.0     10.767792\n",
+      "min    8518.000000               0.0     15.664907\n",
+      "25%    8677.750000               0.0     22.074529\n",
+      "50%    8747.000000               0.0     27.012451\n",
+      "75%    8856.250000               0.0     38.641637\n",
+      "max    9073.000000               0.0     46.858703\n",
+      "Total elapsed time for optimization: 299.03 seconds\n"
      ]
     }
    ],
@@ -618,7 +618,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 315.72it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 312.36it/s]\n"
      ]
     },
     {
@@ -627,13 +627,13 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count     10.000000              10.0     10.000000\n",
-      "mean   11901.100000               0.0      0.000611\n",
-      "std      221.315988               0.0      0.000567\n",
+      "mean   11901.100000               0.0      0.000504\n",
+      "std      221.315988               0.0      0.000531\n",
       "min    11605.000000               0.0      0.000000\n",
       "25%    11704.000000               0.0      0.000000\n",
-      "50%    11933.000000               0.0      0.000753\n",
-      "75%    12059.750000               0.0      0.001028\n",
-      "max    12247.000000               0.0      0.001292\n",
+      "50%    11933.000000               0.0      0.000478\n",
+      "75%    12059.750000               0.0      0.001001\n",
+      "max    12247.000000               0.0      0.001071\n",
       "Total elapsed time for optimization: 0.01 seconds\n"
      ]
     }
@@ -932,7 +932,7 @@
       "Early stopping at iters 9125\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 110.28 sec.\n"
+      "The training time is 109.95 sec.\n"
      ]
     }
    ],
@@ -959,7 +959,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 13.05it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 12.71it/s]\n"
      ]
     },
     {
@@ -968,13 +968,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count    10.000000              10.0     10.000000\n",
-      "mean   9745.900000               0.0      0.004849\n",
-      "std     163.528761               0.0      0.001678\n",
-      "min    9445.000000               0.0      0.002988\n",
-      "25%    9645.000000               0.0      0.003626\n",
-      "50%    9763.000000               0.0      0.004470\n",
-      "75%    9815.500000               0.0      0.005537\n",
-      "max    9979.000000               0.0      0.007733\n",
+      "mean   9745.900000               0.0      0.004792\n",
+      "std     163.528761               0.0      0.002321\n",
+      "min    9445.000000               0.0      0.002524\n",
+      "25%    9645.000000               0.0      0.003073\n",
+      "50%    9763.000000               0.0      0.004030\n",
+      "75%    9815.500000               0.0      0.006079\n",
+      "max    9979.000000               0.0      0.009973\n",
       "Total elapsed time for optimization: 0.05 seconds\n",
       "Number of infeasible solution: 0\n"
      ]
@@ -1097,7 +1097,7 @@
       "Epoch 18, Iters 2375, Training Loss: 13909.44, Validation Loss: 13894.48\n",
       "Epoch 19, Iters 2500, Training Loss: 13909.44, Validation Loss: 13894.48\n",
       "Training complete.\n",
-      "The training time is 33.18 sec.\n"
+      "The training time is 29.86 sec.\n"
      ]
     }
    ],
@@ -1124,23 +1124,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 187.37it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 15.43it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count     10.000000              10.0     10.000000\n",
-      "mean   13976.500000               0.0      0.003942\n",
-      "std      262.245114               0.0      0.000918\n",
-      "min    13610.000000               0.0      0.002525\n",
-      "25%    13748.250000               0.0      0.003255\n",
-      "50%    14030.000000               0.0      0.003937\n",
-      "75%    14139.500000               0.0      0.004394\n",
-      "max    14311.000000               0.0      0.005329\n",
-      "Total elapsed time for optimization: 0.04 seconds\n",
+      "       Obj Val  Constraints Viol  Elapsed Time\n",
+      "count     10.0              10.0     10.000000\n",
+      "mean   14149.0               0.0      0.003497\n",
+      "std        0.0               0.0      0.000944\n",
+      "min    14149.0               0.0      0.002085\n",
+      "25%    14149.0               0.0      0.002998\n",
+      "50%    14149.0               0.0      0.003231\n",
+      "75%    14149.0               0.0      0.004060\n",
+      "max    14149.0               0.0      0.005422\n",
+      "Total elapsed time for optimization: 0.03 seconds\n",
       "Number of infeasible solution: 0\n"
      ]
     }
