Update: MILP result

--- a/test/MILP Vary Obj Series1.ipynb
+++ b/test/MILP Vary Obj Series1.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "# Disable Gurobi output globally\n",
+    "# disable Gurobi output globally\n",
     "gp.setParam(\"OutputFlag\", 0)"
    ]
   },
@@ -524,8 +524,8 @@
     "        lhs = sum(val * model.getCoeff(constr, var) for var, val in zip(vars_in_model, x_val))\n",
     "        rhs = constr.rhs\n",
     "        # determine the violation amount based on the constraint sense\n",
-    "        violation = max(0, lhs - rhs) if constr.sense == GRB.LESS_EQUAL else \\\n",
-    "                    max(0, rhs - lhs) if constr.sense == GRB.GREATER_EQUAL else \\\n",
+    "        violation = max(0, lhs - rhs - 1e-6) if constr.sense == GRB.LESS_EQUAL else \\\n",
+    "                    max(0, rhs - lhs - 1e-6) if constr.sense == GRB.GREATER_EQUAL else \\\n",
     "                    abs(lhs - rhs)\n",
     "        # record the constraint name and its violation amount\n",
     "        viols.append(violation)\n",
