--- a/test/Experiments Tables.ipynb
+++ b/test/Experiments Tables.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "728347bf-989c-43fd-9eb1-683d4c84c3c4",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,7 @@
     "            csv_file = os.path.join(data_path, f\"{problem}_{method}_{size}-{size}_new.csv\")\n",
     "        else:\n",
     "            csv_file = os.path.join(data_path, f\"{problem}_{method}_{size}-{size}.csv\")\n",
+    "    print(csv_file)\n",
     "    if not os.path.exists(csv_file):\n",
     "        # output a warning\n",
     "        warnings.warn(f\"File not found: {csv_file}\")\n",
@@ -1046,23 +1047,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_50-50.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_50-50.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_100-100.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_100-100.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_100-100.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_100-100.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_200-200.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_200-200.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_200-200.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_200-200.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_500-500.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_500-500.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_500-500.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_500-500.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_1000-1000.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_1000-1000.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_1000-1000.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_1000-1000.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n"
      ]
     },
@@ -1979,35 +1980,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_20-20_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_20-20_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_20-20_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_20-20_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_50-50_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_50-50_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_50-50_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_50-50_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_100-100_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_100-100_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_100-100_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_100-100_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_200-200_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_200-200_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_200-200_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_200-200_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_200-200_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_200-200_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_500-500_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_500-500_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_500-500_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_500-500_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_500-500_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_500-500_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_1000-1000_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_exact_1000-1000_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_1000-1000_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_rel_1000-1000_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_4736\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_1000-1000_new.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\1572043496.py:39: UserWarning: File not found: ./result/nc_root_1000-1000_new.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n"
      ]
     },
@@ -2907,6 +2908,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8141aaf-89a7-4073-866f-f69daedfd0a7",
+   "metadata": {},
+   "source": [
+    "### Rosenbrock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7c78a60c-81c6-4d2b-85ea-a5def783001b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./result/rb_cls100_1.csv\n",
+      "./result/rb_thd100_1.csv\n",
+      "./result/rb_exact_1.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_9748\\346861903.py:40: UserWarning: File not found: ./result/rb_thd100_1.csv\n",
+      "  warnings.warn(f\"File not found: {csv_file}\")\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Num Violations'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Num Violations'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m sizes \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m10000\u001b[39m]\n\u001b[0;32m      2\u001b[0m methods \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcls100\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthd100\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexact\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrel\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mroot\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlrn100\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mste100\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m \u001b[43mloadRes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msizes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msizes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmethods\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmethods\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[9], line 8\u001b[0m, in \u001b[0;36mloadRes\u001b[1;34m(problem, sizes, methods, new)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m sizes:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m methods:\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;66;03m# retrive metrics\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m         metrics \u001b[38;5;241m=\u001b[39m \u001b[43mretriveData\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;66;03m# append the results to the list\u001b[39;00m\n\u001b[0;32m     10\u001b[0m         results\u001b[38;5;241m.\u001b[39mappend(metrics)\n",
+      "Cell \u001b[1;32mIn[9], line 59\u001b[0m, in \u001b[0;36mretriveData\u001b[1;34m(problem, size, method, new)\u001b[0m\n\u001b[0;32m     57\u001b[0m obj_mean \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mObj Val\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()  \u001b[38;5;66;03m# mean of the objective values\u001b[39;00m\n\u001b[0;32m     58\u001b[0m obj_median \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mObj Val\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmedian()  \u001b[38;5;66;03m# median of the objective values\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m percent_infeasible \u001b[38;5;241m=\u001b[39m (\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mNum Violations\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mmean() \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m  \u001b[38;5;66;03m# percentage of infeasible instances\u001b[39;00m\n\u001b[0;32m     60\u001b[0m mean_viols \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean Violation\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()  \u001b[38;5;66;03m# average mean violation\u001b[39;00m\n\u001b[0;32m     61\u001b[0m max_viols \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMax Violation\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmax()  \u001b[38;5;66;03m# maximum violation\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Num Violations'"
+     ]
+    }
+   ],
+   "source": [
+    "sizes = [1, 10, 100, 1000, 10000]\n",
+    "methods = [\"cls100\", \"thd100\", \"exact\", \"rel\", \"root\", \"lrn100\", \"ste100\"]\n",
+    "loadRes(problem=\"rb\", sizes=sizes, methods=methods)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ac06dfeb-bddb-4410-b198-59c283f07747",
@@ -2931,7 +2993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
