--- a/test/Experiments Tables.ipynb
+++ b/test/Experiments Tables.ipynb
@@ -32,7 +32,7 @@
     "    # convert into a Pandas DataFrame\n",
     "    result_df = pd.DataFrame(results)\n",
     "    # reshape\n",
-    "    result_df = reshapeDataframe(result_df, sizes)\n",
+    "    result_df = reshapeDataframe(result_df, problem, sizes)\n",
     "    return result_df\n",
     "\n",
     "def retriveData(problem, size, method, new, limit60):\n",
@@ -100,7 +100,7 @@
     "    }\n",
     "    return metrics\n",
     "\n",
-    "def reshapeDataframe(df, sizes):\n",
+    "def reshapeDataframe(df, problem, sizes):\n",
     "    # define the metrics to include\n",
     "    metrics = [\"Obj Mean\", \"Obj Median\", \"% Infeasible\", \"% Unsolved\", \"Time (Sec)\", \"Viol Mean\", \"Viol Max\", \"Num Viol Mean\"]\n",
     "    # define the method to include\n",
@@ -115,7 +115,10 @@
     "                # check if the value has exactly one element\n",
     "                if len(value) != 1:\n",
     "                    raise ValueError(f\"Unexpected number of values ({len(value)}) for Method: {method}, Metric: {metric}, Problem Size: {s}\")\n",
-    "                row[f\"{s}×{s}\"] = value[0]\n",
+    "                if problem == \"rb\":\n",
+    "                    row[f\"{s*2}×4\"] = value[0]\n",
+    "                else:\n",
+    "                    row[f\"{s}×{s}\"] = value[0]\n",
     "            reshaped_data.append(row)\n",
     "    # convert to a DataFrame\n",
     "    reshaped_df = pd.DataFrame(reshaped_data)\n",
@@ -1049,23 +1052,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_exact_50-50.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_exact_50-50.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_exact_100-100.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_exact_100-100.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_root_100-100.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_root_100-100.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_exact_200-200.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_exact_200-200.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_root_200-200.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_root_200-200.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_exact_500-500.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_exact_500-500.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_root_500-500.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_root_500-500.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_exact_1000-1000.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_exact_1000-1000.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result/nc_root_1000-1000.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result/nc_root_1000-1000.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n"
      ]
     },
@@ -2891,7 +2894,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_17032\\3739404624.py:42: UserWarning: File not found: ./result60/rb_rel_10000.csv\n",
+      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_2916\\3139954004.py:42: UserWarning: File not found: ./result60/rb_rel_10000.csv\n",
       "  warnings.warn(f\"File not found: {csv_file}\")\n"
      ]
     },
@@ -2918,11 +2921,11 @@
        "      <th></th>\n",
        "      <th>Method</th>\n",
        "      <th>Metric</th>\n",
-       "      <th>1×1</th>\n",
-       "      <th>10×10</th>\n",
-       "      <th>100×100</th>\n",
-       "      <th>1000×1000</th>\n",
-       "      <th>10000×10000</th>\n",
+       "      <th>2×4</th>\n",
+       "      <th>20×4</th>\n",
+       "      <th>200×4</th>\n",
+       "      <th>2000×4</th>\n",
+       "      <th>20000×4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3491,7 +3494,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Method         Metric        1×1         10×10       100×100     1000×1000  \\\n",
+       "   Method         Metric        2×4          20×4         200×4        2000×4  \\\n",
        "0      RC       Obj Mean  23.265538     59.393365  5.035068e+02  5.938372e+03   \n",
        "1      RC     Obj Median  21.475520     48.857842  4.617061e+02  5.792519e+03   \n",
        "2      RC   % Infeasible   3.000000      0.000000  1.000000e+00  1.000000e+00   \n",
@@ -3549,7 +3552,7 @@
        "54     RS       Viol Max   0.000000      0.217398  0.000000e+00  5.483099e+01   \n",
        "55     RS  Num Viol Mean   0.000000      0.030000  0.000000e+00  1.000000e-02   \n",
        "\n",
-       "     10000×10000  \n",
+       "         20000×4  \n",
        "0   66883.203419  \n",
        "1   66797.105791  \n",
        "2      24.000000  \n",
